<resources>
    <string name="app_name">Signo Zodiacal</string>
    <string name="button_camara">Camara</string>
    <string name="button_select_date">Selecciona tu fecha de nacimiento</string>
    <string name="text_age">Su edad es:</string>
    <string name="text_birthdate">Fecha de Nacimiento</string>
    <string name="text_calculate">Calcular Edad y Signo Zodiacal</string>
    <string name="text_current_date">Fecha Actual:</string>
    <string name="text_hello">Hola</string>
    <string name="text_name">Ingrese su nombre</string>
    <string name="text_zodiac_message">La frase para tu signo:</string>
    <string name="text_zodiac_sign">Tu signo zodiacal aparecerá aquí:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>