<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.signozodiacal.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_calculate"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/text_name"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNombre"
        android:layout_margin="10dp"
        android:text="@string/text_hello"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvZodiacSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_zodiac_sign"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvZodiacMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_zodiac_message"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fechanacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_birthdate"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fechaactual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_current_date"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_age"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_select_date"
        android:textSize="20dp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/BotonFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_camara"/>
    <ImageView
        android:id="@+id/ImagenFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <VideoView
        android:id="@+id/video2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <VideoView
        android:id="@+id/video1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <VideoView
        android:id="@+id/video3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <VideoView
        android:id="@+id/video4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <VideoView
        android:id="@+id/video5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <VideoView
        android:id="@+id/video7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <VideoView
        android:id="@+id/video8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <VideoView
        android:id="@+id/video6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <VideoView
        android:id="@+id/video9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <VideoView
        android:id="@+id/video10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <VideoView
        android:id="@+id/video11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <VideoView
        android:id="@+id/video12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ImageView
        android:id="@+id/boton"
        android:layout_width="137dp"
        android:layout_height="65dp"
        android:src="@drawable/linterna" />


</LinearLayout>